tests/expected/recovery/declarations/003_import_clause_broken.txt
{
  "type": "Program",
  "start": 0,
  "end": 118,
  "sourceType": "module",
  "hashbang": null,
  "body": [
    {
      "type": "ExpressionStatement",
      "start": 68,
      "end": 72,
      "expression": {
        "type": "Identifier",
        "start": 68,
        "end": 72,
        "name": "from"      }    },
    {
      "type": "ExpressionStatement",
      "start": 73,
      "end": 87,
      "expression": {
        "type": "Literal",
        "start": 73,
        "end": 86,
        "value": "./module.js",
        "raw": "'./module.js'"      }    },
    {
      "type": "VariableDeclaration",
      "start": 88,
      "end": 117,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 94,
          "end": 116,
          "id": {
            "type": "Identifier",
            "start": 94,
            "end": 112,
            "name": "anchor_after_error"          },
          "init": {
            "type": "Literal",
            "start": 115,
            "end": 116,
            "value": 1,
            "raw": "1"          }        }
      ]    }
  ],
  "comments": [
    {
      "type": "Line",
      "start": 0,
      "end": 52,
      "value": " Import clause with a missing specifier separator."
    }
  ],
  "errors": [
    {
      "code": "K2002",
      "severity": "error",
      "message": "Expected '}', got identifier 'b'",
      "line": 2,
      "column": 12,
      "offset": 64
    },
    {
      "code": "K2040",
      "severity": "error",
      "message": "Unexpected '}' — unmatched closing brace",
      "line": 2,
      "column": 14,
      "offset": 66
    },
    {
      "code": "K2010",
      "severity": "error",
      "message": "Expected semicolon",
      "line": 2,
      "column": 21,
      "offset": 73
    }
  ]
}
error[K2002]: Expected '}', got identifier 'b'
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/declarations/003_import_clause_broken.js:2:12
   |
 2 | import { a b } from './module.js';
   |            ^
  = note: see TS1005

error[K2040]: Unexpected '}' — unmatched closing brace
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/declarations/003_import_clause_broken.js:2:14
   |
 2 | import { a b } from './module.js';
   |              ^

error[K2010]: Expected semicolon
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/declarations/003_import_clause_broken.js:2:21
   |
 2 | import { a b } from './module.js';
   |                     ^^^^^^^^^^^^^
  = note: see TS1005

--- Statistics ---
Arena: used=37696B reserved=16777216B ratio=0%
Parse errors: 3
